fixed css spacing and added href home to logo and title

--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -31,6 +31,7 @@
     flex: 1;
     font-size: 24px;
     padding-left: 50px;
+    padding-right: 300px;
     margin: 0;
     color: #eaebed;
     font-weight: normal;
